# django-whiteless

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
docs/: examples.md
tests/: settings.py  test_eof.py  test_examples.py  test_whiteless.py  utils.py
tests/examples/: for-loop.md  for-loop.output  remove-all-whitespaces.md  remove-leading-trailing-whitespaces.md  remove-leading-trailing-whitespaces.output  remove-leading-whitespaces.md  remove-leading-whitespaces.output  remove-trailing-newlines.md  remove-trailing-whitespaces.md  remove-trailing-whitespaces.output  replace-with-space.md  replace-with-space.output
whiteless/templatetags/: whiteless.py
