[tool.poetry]
name = "django-whiteless"
version = "0.1.2"
description = "Django template tags for dealing with pesky whitespaces"
authors = ["Deniz Dogan <denizdogan@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/denizdogan/django-whiteless"
repository = "https://github.com/denizdogan/django-whiteless.git"
documentation = "https://django-whiteless.readthedocs.io/en/latest/"
keywords = [
    "django",
    "whitespace",
    "template",
    "tag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
license = "MIT"
packages = [
    { include = "whiteless" },
]
include = [
    "CHANGELOG.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^2.7.9 || ^3.5"
Django = [
    {version = "^1.11", python = "~2.7"},
    {version = "^2.0", python = "^3.5"},
]

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true, python = "^3.6"}
flake8 = "^3.7"
flake8-bugbear = { version = "^19.3", python = "^3.5"}
flake8-isort = "^2.7"
hypothesis = "^4.15"
isort = "^4.3"
markdown-include = { version = "^0.5.1", optional = true }
mkdocs = { version = "^1.0", optional = true }
pipdeptree = "^0.13.2"
pre-commit = "^1.15"
pygments = { version = "^2.3", optional = true }
pytest = "^4.4"
pytest-cov = "^2.6"
pytest-runner = "^4.4"
tox = "^3.8"
pytest-django = "^3.4"
pytest-xdist = "^1.28"

[tool.poetry.extras]
docs = ["mkdocs", "markdown-include"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
