[tool.poetry]
name = "django-whiteless"
version = "1.0.0"
description = "Django template tags for dealing with pesky whitespaces"
authors = ["Deniz Dogan <denizdogan@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/denizdogan/django-whiteless"
repository = "https://github.com/denizdogan/django-whiteless.git"
documentation = "https://github.com/denizdogan/django-whiteless"
keywords = [
    "django",
    "whitespace",
    "template",
    "tag",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
license = "MIT"
packages = [
    { include = "whiteless" },
]
include = [
    "CHANGELOG.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.0 || ^3.0"

[tool.poetry.dev-dependencies]
black = "~21.4b1"
flake8 = "~3.9.1"
flake8-bugbear = "~21.4.3"
flake8-isort = "~4.0.0"
hypothesis = "~6.10.1"
isort = "~5.8.0"
pipdeptree = "~2.0.0"
pre-commit = "~2.12.1"
pytest = "~6.2.3"
pytest-cov = "~2.11.1"
pytest-runner = "~5.3.0"
tox = "~3.23.0"
pytest-django = "~4.2.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.7.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
