[aliases]
test = pytest

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 88
max-complexity = 3

[tool:pytest]
addopts = -s -v
  # --hypothesis-show-statistics --hypothesis-verbosity=verbose
DJANGO_SETTINGS_MODULE = tests.settings

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap=0
use_parentheses=True
line_length=88
